# 24.07-text-project

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.in
app/: main.py
data/inputs/: cc_test.parquet
data/outputs/: output.parquet  run_1.csv  run_2.csv  run_3.csv
notebooks/: main_v2.ipynb
