[tool.poetry]
name = "model"
version = "0.1.0"
description = "Base model project repository"
authors = ["Simonas Adomavicius <adomavicius.simonas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "*"
pandas = "*"
pydantic = "^2"
scikit-learn = "1.5.1"
nltk = "3.8.1"
dill = "*"
catboost = "^1"
xgboost = "^2"
lightgbm = "^4"
numpy = "^1"


[tool.poetry.group.dev.dependencies]
seaborn = "*"
pytest = "*"
ipykernel = "*"
wordcloud = "*"


[tool.poetry.group.inference.dependencies]
flask = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
